# Vault

./: .gitignore  COMPLETION_SUMMARY.md  Cargo.toml  DEVELOPMENT.md  FEATURES_COMPLETED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TEST_COMMANDS.md  config.example.toml  config.toml  install.ps1  install.sh  legacy-rpass.rs
.amazonq/rules/memory-bank/: code-patterns.md  development-context.md  project-overview.md
.github/: secrets.example
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/src/: error.rs  lib.rs  main.rs
app/src/auth/: mod.rs
app/src/cli/: commands.rs  mod.rs  output.rs
app/src/cli/commands/: admin.rs  auth.rs  mod.rs  secrets.rs  sync.rs  users.rs  utils.rs
app/src/config/: mod.rs
app/src/crypto/: aes.rs  chacha.rs  envelope.rs  kdf.rs  mod.rs
app/src/storage/: audit.rs  mod.rs  secret.rs  session.rs  tenant.rs  user.rs
app/src/sync/: conflict.rs  mod.rs  postgres.rs  s3.rs
app/tests/integration/: cli_tests.rs  crypto_tests.rs  storage_tests.rs
docs/: README.md
docs/guides/: installation.md
pictures/: README.md
src/: auth.rs  cli.rs  config.rs  crypto.rs  lib.rs  main.rs  storage.rs  sync.rs
test.code/: README.md  sample-config.toml
test.code/scripts/: init.sh  run-tests.sh  simulate-sync.sh
test.code/secrets/: example-secrets.json
test.code/tests/: integration_test.rs
website/: index.html  package.json
website/src/: index.css  main.tsx
website/src/pages/: Demo.tsx  Docs.tsx  Home.tsx
