[package]
name = "vault"
version = "0.1.0"
edition = "2021"
description = "A local-first, multi-tenant password manager with cloud sync"
license = "MIT"

[[bin]]
name = "vault"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sled = "0.34"
ring = "0.17"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.6", features = ["derive"] }
secrecy = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
indicatif = "0.17"
owo-colors = "3.5"
console = "0.15"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
bincode = "1.3"
rand = "0.8"
dirs = "5.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"