[package]
name = "rvault"
version = "0.1.2"
edition = "2021"
authors = ["Akshay B <akshay2642005@gmail.com>"]
description = "A local-first, multi-tenant password manager with cloud sync capabilities"
documentation = "https://docs.rs/vault-cli"
homepage = "https://vault.dev"
repository = "https://github.com/Akshay2642005/Vault"
license = "MIT"
keywords = ["password", "manager", "security", "encryption", "cli"]
categories = ["command-line-utilities", "cryptography", "authentication"]
readme = "../README.md"
exclude = ["tests/*", "benches/*", ".github/*"]

[[bin]]
name = "vault"
path = "src/main.rs"

[dependencies]
# CLI & UX
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
dialoguer = "0.11"
indicatif = "0.17"
owo-colors = "4.0"
console = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Local storage
sled = "0.34"

# Cryptography
ring = "0.17"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
secrecy = "0.8"
rand = "0.8"
hkdf = "0.12"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
env_logger = "0.10"
sha2 = "0.10"

# HTTP client
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }

# Database integration
sqlx = { version = "0.7", features = [
    "sqlite",
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
], optional = true }

# Cloud storage
aws-sdk-s3 = { version = "1.0", optional = true }
aws-config = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
tokio-test = "0.4"

[features]
default = ["cloud-sync"]
cloud-sync = ["sqlx", "aws-sdk-s3", "aws-config"]
sqlite = ["sqlx"]
postgres = ["sqlx"]
s3 = ["aws-sdk-s3", "aws-config"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
